try the stretchy thing w offset

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,6 +89,10 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
+body {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
 body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
